// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Query: { "source": "example-source", "queryType": "search-media", "searchText": "search text" } 1`] = `
{
  "media": [
    {
      "files": [],
      "id": "1-a",
      "mediaFinderSource": "example-source",
      "title": "Media Title",
    },
  ],
  "page": {
    "isLastPage": false,
    "pageFetchLimitReached": false,
    "pageNumber": 1,
    "paginationType": "offset",
  },
  "request": {
    "pageNumber": 1,
    "queryType": "search-media",
    "searchText": "search text",
    "source": "example-source",
  },
}
`;

exports[`Query: { "source": "example-source", "queryType": "search-media", "searchText": "search text" } 2`] = `
{
  "media": [
    {
      "files": [],
      "id": "2-a",
      "mediaFinderSource": "example-source",
      "title": "Media Title",
    },
  ],
  "page": {
    "isLastPage": true,
    "pageFetchLimitReached": false,
    "pageNumber": 2,
    "paginationType": "offset",
  },
  "request": {
    "pageNumber": 2,
    "queryType": "search-media",
    "searchText": "search text",
    "source": "example-source",
  },
}
`;

exports[`Query: { "source": "example-source", "queryType": "search-media", "searchText": "search text" } 3`] = `null`;

exports[`Query: { "source": "example-source", "queryType": "single-media", "id": "test-getWebpage" } 1`] = `
{
  "media": [
    {
      "files": [],
      "id": "1234",
      "mediaFinderSource": "example-source",
      "title": "Example Domain",
    },
  ],
  "request": {
    "id": "test-getWebpage",
    "queryType": "single-media",
    "source": "example-source",
  },
}
`;
